# NextGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  main  main.c
Software/: CMakeLists.txt  main.c
Software/Cfg/: Cfg.h
Software/Tools/: common.c  common.h
Tools/: Build.bat  build.sh  clean.bat  clean.sh
